# voxprompt

./: .gitignore  CLAUDE.md  CODER_BRIEFING.md  LICENSE  README.de.md  README.en.md  README.md  app_launcher.py  build_metadata.py  config.toml  pyproject.toml  setup.py
assets/: voxprompt.icns
packaging/: config.toml  entitlements.plist
scripts/: build_app.sh  com.erik.voxprompt.plist  gen_assets.py  make_dmg.sh  make_icons.sh  notarize.sh  sign_app.sh
src/voxprompt/: __init__.py  app.py  audio.py  datalog.py  hotkeys.py  llm.py  login_item.py  models.py  modes.py  output.py  server.py  transcribe.py  updates.py
src/voxprompt/prompts/: cleanup.md  cleanup_en.md  prompt_builder.md
tests/: test_audio.py  test_datalog.py  test_hotkeys.py  test_llm.py  test_login_item.py  test_models.py  test_modes.py  test_pipeline.py  test_server.py  test_transcribe.py  test_updates.py
